<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_margin="@dimen/margin_main"
        android:id="@+id/llAddMainWorkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvAddMainWorkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chooseMainWorkout"
            android:textSize="@dimen/text_size"/>
        <Spinner
            android:id="@+id/spAddMainWorkout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"></Spinner>
    </LinearLayout>
    <Button
        android:id="@+id/btnGoToVariationSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseWorkoutVariation"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
    <ListView
        android:id="@+id/lvSelectedWorkouts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </ListView>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_main"
        android:id="@+id/llAddWorkoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:visibility="gone">
        <Button
            android:id="@+id/btnAddWorkout"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addWorkout"/>
        <Button
            android:id="@+id/btnAddPlace"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addPlace"/>
    </LinearLayout>

</LinearLayout>